# smart_reminder_esp32

./: .cproject  .project  README.md  button_test  main_screen.c  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  button_test  display.c  display.h  font.c  font.h  http_server.c  http_server.h  ldr_gl5537.c  ldr_gl5537.h  ldr_service.c  ldr_service.h  main.c  main_buzzer_blueled.c  main_screen.c  mqtt.c  mqtt.h  reminders_store.c  reminders_store.h  rgb_led.c  rgb_led.h  send_email.c  send_email.h  sntp.c  sntp.h  tasks_common.h  time_utils.c  time_utils.h  ui_buttons.c  ui_buttons.h  ui_draw.c  ui_draw.h  wifi_app.c  wifi_app.h
main/Webpage/: index.html
